crates/oxc_react_compiler/tests/snapshots/array-at-mutate-after-capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/array-at-mutate-after-capture.js
---
import { c as _c } from "react/compiler-runtime";
// x's mutable range should extend to `mutate(y)`
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.b) {
		x = [42, {}];
		const idx = foo(props.b);
		const y = x.at(idx);
		mutate(y);
		$[0] = props.b;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
