crates/oxc_react_compiler/tests/snapshots/array-map-frozen-array-noAlias.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/array-map-frozen-array-noAlias.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		const y = x.map(_temp);
		t1 = [x, y];
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
function _temp(item) {
	return item;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}],
	isComponent: false
};
